# CouchPotatoServer

./: .coveragerc  .dockerignore  .flake8  .gitignore  .trivyignore  AGENTS.md  BUILD-AND-TEST.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CouchPotato.py  Dockerfile  Dockerfile.python2  Dockerfile.python3  ENHANCED-TESTING-STRATEGY.md  GITHUB-WORKFLOW.md  Gruntfile.js  MANIFEST.in  Makefile  PR-SUMMARY.md  README-Docker.md  README.md  TESTING_IMPROVEMENTS.md  UPGRADING.md  conftest.py  couchpotato.out  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  lighthouserc.js  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.in  (+40 more)
.design-sync/: NOTES.md  build.sh  config.json  conventions.md  readme-overview.md  styles.css
.githooks/: pre-push
.github/: contributing.md  dependabot.yml
.openclaw/: workspace-state.json
QA/: ACCESSIBILITY_AUDIT.md  OPEN_BACKLOG_AUDIT_2026-05-09.md  QA_FINDINGS.md  QA_REPORT_v3.0.12.md  QA_SESSION_2026-02-16.md  QA_SESSION_2026-02-19.md  QA_TEST_PLAN.md
couchpotato/: __init__.py  api.py  compat.py  environment.py  environment_test.py  integration_test.py  runner.py  simple_healthcheck.py
docker/: entrypoint.sh
docs/: API.md  CODERNITYDB_PY3_ISSUES.md  DATABASE_SCHEMA.md  DATA_MODEL.md  GITHUB_ACTIONS.md  NOTIFICATIONS.md  automation-settings.md  development-process.md  technical-debt.md
ds-bundle/: README.md  _ds_needs_recompile
libs/: color_logs.py  daemon.py
(+653 files in other folders)
